@@ -7,7 +7,8 @@ wxWidgets Change Log - For more verbose changes, see the manual
 
 All:
 
-- Fixed wxScopeGuard to work with VC++, documented it
+- Fixed wxScopeGuard to work with VC++, documented it.
+- Fixed proxy handling in wxURL.
 
 wxMSW:
 
@@ -16,6 +17,7 @@ wxMSW:
 wxUniv:
 
 - Window creation now honours wxVSCROLL.
+
 
 2.6.1
 -----
